--- a/@global/layout.html
+++ b/@global/layout.html
@@ -1,11 +1,23 @@
-<header>
-  <navi :items="navigation.header"/>
-</header>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>{{ title }}</title>
+  <link rel="icon" href="{{ favicon }}" type="image/svg+xml">
+  <script type="module" src="/app/controllers/bootstrap.js"></script>
+</head>
+<body>
+  <header>
+    <navi :items="navigation.header"/>
+  </header>
 
-<main>
-  <slot/>
-</main>
+  <main>
+    {{ content }}
+  </main>
 
-<footer>
-  <navi :items="navigation.footer"/>
-</footer>
+  <footer>
+    <navi :items="navigation.footer"/>
+  </footer>
+</body>
+</html>
